# GENesis-Voice

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CONTRACTS.md  LICENSE  README.md  ruff.toml
.github/scripts/: check-private-data.sh
.github/workflows/: ci.yml
bridges/ambient_bridge/: README.md  __init__.py  active_session.py  active_speaker_id.py  active_transcript.py  config.py  connection_stats.py  diar_subprocess.py  enroll.py  esphome_recovery.py  feeder.py  ort_session.py  pipeline.py  server.py  speaker_id.py  store.py
bridges/listen_bridge/: README.md  __init__.py  config.py  feeder.py  server.py  transcript.py
bridges/meeting_bridge/: README.md  __init__.py  (+5 more)
bridges/s2s_bridge/: .gitignore  Dockerfile  config.yaml  conftest.py  pyproject.toml  repository.json
bridges/s2s_bridge/app/: audio_recorder.py  audio_recording_service.py  disconnect_tool.py  genesis_tool_service.py  interrupt_relay.py  main.py  noise_gate.py  raw_audio_serializer.py  session_idle_manager.py  session_manager.py  websocket_handler.py  ws_control.py
bridges/s2s_bridge/edge/: .env.example  run-edge.sh
bridges/s2s_bridge/root/: run.sh
bridges/s2s_bridge/tests/: test_disconnect_tool.py  test_genesis_tool_service.py  test_instruction_refresh.py  test_noise_gate.py  test_session_idle_manager.py  test_session_manager.py  test_ws_control.py  test_ws_ping_disable.py
deploy/: install.sh  meeting.env.example  omi.env.example
docs/: SETUP.md  genesis-voice-architecture.drawio  omnipresence-roadmap.md
firmware/: README.md  secrets.yaml.example  voice_pe_config.yaml
(+55 files in other folders)
