[tool.poetry]
name = "genesis-voice-bridge"
version = "0.2.0"
description = "Genesis voice bridge addon — bidirectional voice via OpenAI Realtime API with WebSocket support"
authors = ["Genesis <noreply@github.com>"]
packages = [{include = "app", from = "."}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
# Dependencies match poetry.lock — do not change without regenerating the lock.
# httpx is available as a transitive dep of pipecat-ai (used by genesis_tool_service.py).
pipecat-ai = {extras = ["openai", "websocket"], version = ">=1.3.0"}
python-dotenv = ">=1.0.0"
fastapi = ">=0.100.0"
uvicorn = {extras = ["standard"], version = ">=0.23.0"}
websockets = ">=13.0"

[tool.poetry.scripts]
start = "app.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
